# graph_builder

./: .env_example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/example1/: accessories_flat.csv
entity_graph/: __init__.py  config.py  graph_manager.py
entity_graph/graph_extractor/: auto_header_llm.py  entities_graph_extractor.py
entity_graph/graph_extractor/processing/: config_factory.py  enrichment.py  extraction.py  extraction_models.py  extraction_multiline.py  extraction_page.py  extraction_router.py  extraction_table.py  get_table.py  hierarchy.py  ingesting.py  model_structure.py  models.py  normalization.py  utils.py
entity_graph/models/entity_graph/: __init__.py  artifact.py  entity.py  file.py  graph.py  identifier.py  node_factory.py  object.py  table.py
examples/: example1.ipynb  usage_header_extraction.py
src/entity_graph_api/: Dockerfile  config.py  config_logger.py  main.py
src/entity_graph_api/internal/: authentication.py
src/entity_graph_api/models/: entity_graph.py
src/entity_graph_api/routers/: __init__.py  entity_graph.py  health.py
